--- a/style.css
+++ b/style.css
@@ -44,7 +44,17 @@ body {
     text-align: center;
     text-decoration: none;
 }
-
+#kkk {
+    color: var(--accentColor);
+    font-size: 1rem;
+    font-weight: bold;
+    line-height: 1.25;
+    display: block;
+    font-family: var(--font);
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+}
 #links {
     max-width: 675px;
     width: auto;
